Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -32,6 +32,28 @@
 <div class="fb-like" data-href="http://www.genenetwork.org/whats_new.html" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 
 <Blockquote>
+<STRONG>2014-01-31: BXD Heart Polar Metabolites Gene Expression</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>EPFL/LISP BXD CD Heart Affy Mouse Gene 2.0 ST Gene Level (Jan14) RMA **</li>
+<li>EPFL/LISP BXD HFD Heart Affy Mouse Gene 2.0 ST Gene Level (Jan14) RMA **</li>
+<li>EPFL/LISP BXD CD Heart Affy Mouse Gene 2.0 ST Exon Level (Jan14) RMA **</li>
+<li>EPFL/LISP BXD HFD Heart Affy Mouse Gene 2.0 ST Exon Level (Jan14) RMA **</li>
+</ul>
+Currently this dataset is confidential, please contact <a href="mailto:admin.auwerx@epfl.ch">Johan Auwerx</a> Ecole Polytechnique Federale de Lausanne for further information. (Implemented by Johan Auwerx, Evan Williams, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-01-30: <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE15745" target=_blank>GEO Series GSE15745</a></STRONG> Abundant Quantitative Trait Loci for CpG Methylation and Expression Across Human Brain Tissues.
+<ul>
+	<li>GSE15745 NIH Human Brain Cerebellum ILM humanRef-8 v2.0 (May10) RankInv</li>
+	<li>GSE15745 NIH Human Brain Prefrontal Cortex ILM humanRef-8 v2.0 (May10) RankInv</li>
+	<li>GSE15745 NIH Human Brain Temporal Cerebral ILM humanRef-8 v2.0 (May10) RankInv</li>
+	<li>GSE15745 NIH Human Brain Pons ILM humanRef-8 v2.0 (May10) RankInv</li>
+</ul>
+Currently this dataset is in progress, please contact <a href="mailto:gibbsr@mail.nih.gov">J Raphael Gibbs</a> National Institutue on Aging, NIH for further information. (Implemented by J Raphael Gibbs, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
 <STRONG>2014-01-06: BXD Mouse Retina Blast Gene expression</STRONG> profiling by array entered into GeneNetwork.
 <ul>
 	<li>DoD TATRC Retina Blast Affy MoGene 2.0 ST (Dec13) RMA <b>Gene Level</b> **</li>
