Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -50,7 +50,7 @@ Currently this dataset is confidential, please contact <a href="mailto:admin.auw
 	<li>GSE15745 NIH Human Brain Temporal Cerebral ILM humanRef-8 v2.0 (May10) RankInv</li>
 	<li>GSE15745 NIH Human Brain Pons ILM humanRef-8 v2.0 (May10) RankInv</li>
 </ul>
-Currently this dataset is in progress, please contact <a href="mailto:gibbsr@mail.nih.gov">J Raphael Gibbs</a> National Institutue on Aging, NIH for further information. (Implemented by J Raphael Gibbs, Arthur Centeno and Rob Williams).
+Currently this dataset is in progress, please contact <a href="mailto:gibbsr@mail.nih.gov">J Raphael Gibbs</a> National Institutue on Aging, NIH for further information. Data originated from <a href="http://www.ncbi.nlm.nih.gov/gtex/GTEX2/gtex.cgi" target=_blank>GTEx (Genotype-Tissue Expression) eQTL Browser</a> (Implemented by J Raphael Gibbs, Arthur Centeno and Rob Williams).
 </Blockquote>
 
 <Blockquote>
