Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -55,7 +55,7 @@
 <B><I>Please send us citations to articles that we may have missed.</I></B>
 <OL>
 <LI>
-Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2013</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain Behav. in press
+Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2013</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain & Behavior in press
 
 <BR>
 <BR>
@@ -152,6 +152,8 @@ Templeton JP, Freeman NE, Nickerson JM, Jablonski MM, Rex TS, Williams RW, Geise
 <LI>
 Wang J, Williams RW, Manly KF (<a href="http://journals.humanapress.com/ArticleDetail.pasp?issn=1539-2791&acode=NI:1:4:299" target="_blank" class="fwn">2003</a>) WebQTL: Web-based complex trait analysis. Neuroinformatics 1: 299-308 <A href="http://www.genenetwork.org/pdf/webqtl.pdf" class="fwn"><I>Full Text PDF Version</I></A>. [A good technical reference to WebQTL and GeneNetwork]
 <LI>
+Williams RW, Gu J, Qi S, Lu L (<a href="http://journals.humanapress.com/ArticleDetail.pasp?issn=1539-2791&acode=NI:1:4:299" target="_blank" class="fwn">2003</a>) The genetic structure of recombinant inbred mice: high-resolution consensus maps for complex trait analysis. Genome Biology 2(11)<A href="http://genomebiology.com/content/2/11/RESEARCH0046" class="fwn"><I>Full Text Version</I></A>. [A detailed analysis of the genetics of recombinant inbred strains]
+<LI>
 Chesler EJ, Wang J, Lu L, Qu Y, Manly KF, Williams RW (<a href="http://journals.humanapress.com/ArticleDetail.pasp?issn=1539-2791&acode=NI:1:4:343" target="_blank" class="fwn">2003</a>) Genetic correlates of gene expression in recombinant inbred strains: a relational model to explore for neurobehavioral  phenotypes. Neuroinformatics 1: 343-357. <A href="http://www.nervenet.org/pdf/Genetic_Correlation_webQTL.pdf" class="fwn"><I>Full Text PDF Version</I></A>. [Best reference regarding interpretation of genetic correlations.]
 <LI>
 Chesler EJ, Lu L, Wang J, Williams RW, Manly KF (<a href="http://www.nature.com/cgi-taf/DynaPage.taf?file=/neuro/journal/v7/n5/full/nn0504-485.html" target="_blank" class="fwn">2004</a>) WebQTL: rapid exploratory analysis of gene expression and genetic networks for brain and behavior. Nature Neuroscience 7: 485-486. <A href="http://www.genenetwork.org/pdf/nn0504-485.pdf"  class="fwn"><I>Full Text PDF Version</I></A> [A short review]
@@ -223,11 +225,13 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 <OL>
 
 <LI>
-Farris SP, Miles MF (<A HREF="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0082435" target="_blank" class="fwn">2013</A>) Fyn-dependent gene networks in acute ethanol sensitivity. PLoS One, in press 
-
+Bhandari P, Hill JS, Farris SP, Costin B, Martin I, Chan CL, Alaimo JT, Bettinger JC, Davies AG, Miles MF, Grotewiel M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22239914" target="_blank" class="fwn">2013</A>) Chloride intracellular channels modulate acute ethanol behaviors in Drosophila, Caenorhabditis elegans and mice. Genes, Brain & Behavior 11:387-97
+<LI>
+DuBose CS, Chesler EJ, Goldowitz D, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23289978" target="_blank" class="fwn">2013</A>) Use of the expanded panel of BXD mice narrow QTL regions in ethanol-induced locomotor activation and motor incoordination. Alcohol Clin Exp Res 37:170-83
+<LI>
+Farris SP, Miles MF (<A HREF="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0082435" target="_blank" class="fwn">2013</A>) Fyn-dependent gene networks in acute ethanol sensitivity. PLoS One 8:e82435
 <LI>
 Harenza JL, Muldoon PP, Biasi MD, Imad Damaj M, Miles MF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24289814" target="_blank" class="fwn">2013</A>) Genetic variation within the Chrna7 gene modulates nicotine reward-like phenotypes in mice. Genes, Brain & Behavior in press 
-
 <LI>
 Houtkooper RH, Mouchiroud L, Ryu D, Moullan N, Katsyuba E, Knott G,  Williams RW,  Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23698443" target="_blank" class="fwn">2013</A>) Mitonuclear protein imbalance as a conserved longevity mechanism. Nature 497:451-457  <A HREF="http://www.biomedcentral.com/content/pdf/1471-2164-12-610.pdf" target="_blank" class="fwn">PDF version</A>
 <LI>
