Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -31,6 +31,7 @@
 
 <BR> <BR>
 <left>
+<a href="#2014">2014</a> |
 <a href="#2013">2013</a> |
 <a href="#2012">2012</a> |
 <a href="#2011">2011</a> |
@@ -210,6 +211,29 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 </Blockquote>
 
 
+
+
+
+<BLOCKQUOTE class="fs14">
+		<A NAME="2014" class="subtitle"">GeneNetwork (2014) </A>
+<BLOCKQUOTE>
+
+</Blockquote>
+<OL>
+
+
+<LI>Graybeal C, Bachu M, Mozhui K, Saksida LM, Bussey TJ, Sagalyn E, Williams RW, Holmes A (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24586288" target="_blank" class="fwn">2014</A>)  Strains and stressors: an analysis of touchscreen learning in genetically diverse mouse strains. PLoS One 9(2):e87745
+<LI>Hall RA, Liebe R, Hochrath K, Kazakov A, Alberts R, Laufs U, Böhm M, Fischer HP, Williams RW, Schughart K, Weber SN, Lammert F (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24586654" target="_blank" class="fwn">2014</A>) Systems genetics of liver fibrosis: Identification of fibrogenic and expression quantitative trait loci in the BXD murine reference population.PLoS One 9(2):e89279
+<LI>McLachlan SM, Hamidi S, Aliesky H, Williams RW, Rapoport B (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24564389" target="_blank" class="fwn">2014</A>) Sex, genetics and the control of thyroxine and thyrotropin in mice. Thyroid in press
+<LI>Pandey AK, Lu L, Wang X, Homayouni R, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24523945" target="_blank" class="fwn">2014</A>) Functionally enigmatic genes: a case study of the brain ignorome. PLoS One 9(2):e88889
+<LI>Toth LA, Trammell RA, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24535895" target="_blank" class="fwn">2014</A>) Mapping complex traits using families of recombinant inbred strains: an overview and example of mapping susceptibility to Candida albicans induced illness phenotypes. Pathog Dis. in press
+<LI>Wang L, Lu W, Zhang L, Huang Y, Scheib R, Liu X, Myers L, Lu L, Farber CR, Liu G, Wang CY, Deng H, Williams RW, Wang Y, Gu W, Jiao   (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24416236" target="_blank" class="fwn">2014</A>)  Trps1 differentially modulates the bone mineral density between male and female mice and its polymorphism associates with BMD differently between women and men. PLoS One9(1):e84485
+<LI>
+Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2014</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain Behav. 13(3):247-60
+
+
+</OL>
+</Blockquote>
 
 
 
