Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/faq.html
+++ b/web/faq.html
@@ -624,7 +624,7 @@ Strain means for these probe sets should in general be either high or low. When 
 
 <LI>Do not start with text or abbreviations that will not be understandable to all users, such as "RSS female and male..."
 
-<LI>Please us a space between a number and the units: Prepulse inhibition at 70 dB for females (not 70db). Please use the correct form of the abbreviation.
+<LI>Please use a space between a number and the units: Prepulse inhibition at 70 dB for females (not 70db). Please use the correct form of the abbreviation.
 
 <LI>Use American spelling. 
 
