Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/faq.html
+++ b/web/faq.html
@@ -581,14 +581,14 @@ Strain means for these probe sets should in general be either high or low. When 
 <B>A22: </B>Phenotype trait names in GeneNetwork should have this general form when possible:
 
 <OL>
-<LI><B>Your description should start with very short list of "approved" general category and ontology terms</B>. These terms are used to subdivide the entire collection of phenotypes by system, organ, or level of analysis.  Some examples may help:  "Central nervous system", "Immune system", "Metabolism", "Development", or "Urogenital system". Capitalize this list as you would a standard English sentence. Separate terms by commas and then end the terms with a colon. For example,  "Central nervous system, pharmacology, endocrinology:"  is a valid set of three terms. These terms do not really describe your trait, but are used by you and other users to figure out how many traits there are in specific categories. 
+<LI><B>Your description should start with very short list of "approved" general category and ontology terms</B>. These terms are used to subdivide the entire collection of phenotypes by system, organ, or level of analysis.  Some examples may help:  "Central nervous system", "Immune system", "Metabolism", "Development", or "Urogenital system". Capitalize this list as you would a standard English sentence. Separate terms by commas and then end the terms with a colon. For example,  "Central nervous system, pharmacology, endocrinology:"  is a valid set of three terms. These terms do not really describe your trait, but are used by you and others to figure out how many traits there are in specific categories. 
 
-<BR><BR>Before making up your own terms, please review the current terms in GeneNetwork and find some terms/ontology categories that look good to you. If you have questions contact one of us on the GeneNetwork development team.
+<BR><BR>Before making up your own terms, please review the current set of terms in GeneNetwork and find some terms/ontology categories that look good to you. If you have questions contact one of us on the GeneNetwork development team (rwilliams@uthsc.edu).
 <BR>
 
 <LI>After the colon start with your description of the phenotype you have generated. For example: "Ethanol response..." or  "Anxiety assay...",   "Brain weight...".  The first letter should almost always be capitalized.
 
-<LI><B>Do not start with a generic uninformative word</B> such as "Mean", "Maximum", "Mechanical", "Count", "Number", "Difference", "Baseline", "Induction", "Decrease", "New", "Adjusted", "Distance", "Right", "Left", "Bilateral", "Time", "Total", "Percentage", "Percent".  The reason is that the traits should be alphabetized and categorized in a conceptually useful way; not by something "dumb" like the "total" or "percent".
+<LI><B>Do not start with a generic uninformative word</B> such as "Mean", "Maximum", "Left", "Right", "Count", "Number", "Difference", "Baseline", "Induction", "Decrease", "New", "Adjusted", "Distance", "Bilateral", "Time", "Total", "Percentage", "Percent".  The reason is that the traits should in their default order be alphabetized and categorized in a conceptually useful way; not by something "dumb" like the "total" or "percent".
 
 <LI><B>Do not start with a specific instrumental assay</B> such as "Morris water maze" or "Dowel test..." or "Porsolt test behavior".  Many of these tests will be unknown to other users. Try to use a term that reflects the intent of the assay (Motor coordination test, Learning and memory assay, Allergic airway response). This may be difficult, particularly for tests such as the Porsolt swim test and the Morris water maze that measure aspects of many different traits (anxiety, activity level, spatial navigation, visual acuity etc). But in the interest of clarity of intent rather than precision of measurement, please follow this suggestion. The actual assay instrument can be listed after the primary and secondary trait descriptions. 
 
@@ -598,9 +598,9 @@ Strain means for these probe sets should in general be either high or low. When 
 
 <LI><B>Series of more precise definitions of the phenotype and the subject(s)</B> will often follow with commas used as separators. If possible make this understandable to almost any user, even at the risk of being wordy. 
 
-<P>For example, "Cocaine response (3 x 3.2 mg/kg ip, Days 2, 3, and 4), conditioned place preference (CPP), change in time in cocaine-paired compartment relative to baseline (Day 5 minus Day 1) for 50 to 90-day-old males and females [sec]"
+<P>For example, "Cocaine response (3 x 3.2 mg/kg ip, days 2, 3, and 4), conditioned place preference (CPP), change in time in cocaine-paired compartment relative to baseline (Day 5 minus Day 1) for 50 to 90-day-old males and females [sec]"
 
-<LI><B>Sex</B>. If the data are for males please write out "in males" or "of male" or "for males".  Do not just add a comma such as " , males" or "(M)". This should usually go at the end of the description.
+<LI><B>Sex</B>. If the data are for males please write out "in males" or "of male" or "for males".  Do not just add a comma such as " , males" or "(M)". Definitely  do not use hyphens "-males" since the hyphen can be confused for a minus sign. Sex and age should usually go toward the end of the description.
 
 <LI>Age and condition of subjects can be added if you think it is essential or helpful. However, do not bother with a generic addition "adult" since that is what most users will reasonably assume. If you would like to add an age range then use this format "in 100 to 200-day-old males and females" or "of 3 to 4-month-old males".
 
