--- a/web/reference.html
+++ b/web/reference.html
@@ -58,7 +58,8 @@
 
 <LI>
 Hayes SK, Hager R, Grencis RK (2014) Sex-dependent genetics effects on immune responses to parasitic nematodes. BMC Genomics 15:193
-
+<BR>
+<BR>
 
 <LI>
 Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2014</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain Behav. 13:247-260
@@ -415,7 +416,7 @@ Jiao Y, Jiao F, Yan J, Xiong Q, Shriner D, Hasty K, Stuart J, Gu W (<a href="htt
 <LI>
 Krebs J, Römer D, Overall RW, Fabel K. Babu H, Brandt M, Williams RW, Jessberger S, Kempermann G (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21398278"  target="_blank" class="fwn">2011</a>)) Adult hippocampal neurogenesis and plasticity in the infrapyramidal bundle of the mossy fiber projection: II. Genetic covariance and identification of Nos1 as a linking candidate gene. Frontiers in Neuroscience 5:106
 <A HREF="http://www.nature.com/tp/journal/v1/n7/pdf/tp201124a.pdf" target="_blank" class="fwn"><I>PDF</I> </A> version
-<A HREF="/images/upload/Jansen_2011_PLoSONE.pdf" target="_blank" class="fwn"><I>PDF</I>
+<A HREF="/images/upload/Jansen_2011_PLoSONE.pdf" target="_blank" class="fwn"><I>PDF</I></A>
 <LI>
 Krebs J, Römer B, Overall RW, Fabel K, Babu H, Brandt MD, Williams RW, Jessberger S, Kempermann G (<A HREF="https://ncbi.nlm.nih.gov/pubmed/21960957" target="_blank" class="fwn">2011</A>) Adult hippocampal neurogenesis and plasticity in the infrapyramidal bundle of the mossy fiber projection: II. Genetic covariation and identification of <I>Nos1</I> as linking candidate gene. Frontiers in Neuroscience 5:106 
 <A HREF="http://www.frontiersin.org/Journal/DownloadFile.ashx?pdf=1&FileId=%202584&articleId=%2011569&Version=%201&ContentTypeId=21&FileName=%20fnins-05-00106.pdf" target="_blank" class="fwn"><I>PDF</I> </A> version
