Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -61,44 +61,13 @@ Hayes SK, Hager R, Grencis RK (2014) Sex-dependent genetics effects on immune re
 <BR>
 <BR>
 
+<LI>Harenza JL, Muldoon PP, De Biasi M, Damaj MI, Miles MF (2014) Genetic variation within the Chrna7 gene modulates nicotine reward-like phenotypes in mice. Genes Brain Behav 13:213-225
+<BR>
+<BR>
+
+
 <LI>
 Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2014</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain Behav. 13:247-260
-
-<BR>
-<BR>
-
-<LI>
-Templeton JP, Wang X, Freeman NE, Ma Z, Lu A, Hejtmancik F, Geisert EE (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23978599" target="_blank" class="fwn">2013</A>) A crystallin gene network in the mouse retina. Exp Eye Res. 116C:129-140
-<BR>
-<BR>
-
-<LI>
-Huang Y, Wang L, Bennett B, Williams RW, Wang YJ, Gu WK, Jiao Y (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24085430" target="_blank" class="fwn">2013</A>) Potential role of Atp5g3 in epigenetic regulation of alcohol preference or obesity from a mouse genomic perspective. Genet Mol Res 12:3662-3674
-
-<BR>
-<BR>
-
-<LI>
-Vanderlinden LA, Saba LM, Kechris K, Miles MF, Hoffman PL, Tabakoff B (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23894363" target="_blank" class="fwn">2013</A>) Whole brain and brain regional coexpression network interactions associated with predisposition to alcohol consumption. PLoS One 8:e68878.
-
-<BR>
-<BR>
-
-<LI>
-Mulligan MK, Dubose C, Yue J, Miles MF, Lu L, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23847651" target="_blank" class="fwn">2013</A>) Expression, covariation, and genetic regulation of miRNA Biogenesis genes in brain supports their role in addiction, psychiatric disorders, and disease. Frontiers in Genetics 4:126
-
-<BR>
-<BR>
-
-<LI>
-Liebe R, Hall RA, Williams RW, Dooley S, Lammert F (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23943854" target="_blank" class="fwn">2013</A>) Systems genetics of hepatocellular damage in vivo and in vitro: identification of a critical network on chromosome 11 in mouse. Physiological Genomics 45:931-939
-
-<BR>
-<BR>
-
-<LI>
-Jellen LC, Lu L, Wang X, Unger EL, Earley CJ, Allen RP, Williams RW, Jones BC (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23911809" target="_blank" class="fwn">2013</A>) Iron deficiency alters expression of dopamine-related genes in the ventral midbrain in mice. Neuroscience 252:13-23 
-
 
 <BR>
 <BR>
@@ -223,6 +192,8 @@ Harenza JL, Muldoon PP, Biasi MD, Imad Damaj M, Miles MF (<A HREF="https://ncbi.
 <LI>
 Hayes SK, Hager R, Grencis RK (2014) Sex-dependent genetics effects on immune responses to parasitic nematodes. BMC Genomics 15:193
 
+<LI>Loos M, Mueller T, Gouwenberg Y, Wijnands R, van der Loo RJ, Birchmeier C, Smit AB, Spijker S (<A HREF="/images/upload/Loos_Spijker_Nrg3Impulsive_BioPsch_2014.pdf" target="_blank" class="fwn">2014</A>) Neuregulin-3 in the mouse medial prefrontal cortex regulates impulsive action. Biol Psychiatry 2014, in press. 
+
 <LI>McLachlan SM, Hamidi S, Aliesky H, Williams RW, Rapoport B (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24564389" target="_blank" class="fwn">2014</A>) Sex, genetics and the control of thyroxine and thyrotropin in mice. Thyroid in press
 
 <LI>Pandey AK, Lu L, Wang X, Homayouni R, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24523945" target="_blank" class="fwn">2014</A>) Functionally enigmatic genes: a case study of the brain ignorome. PLoS One 9(2):e88889
@@ -256,6 +227,8 @@ Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, 
 
 <LI>
 Bhandari P, Hill JS, Farris SP, Costin B, Martin I, Chan CL, Alaimo JT, Bettinger JC, Davies AG, Miles MF, Grotewiel M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22239914" target="_blank" class="fwn">2013</A>) Chloride intracellular channels modulate acute ethanol behaviors in Drosophila, Caenorhabditis elegans and mice. Genes, Brain & Behavior 11:387-97
+<LI>
+Cheng Y, Gaughan J, Midic U, Han Z, Liang CG, Patel BG, Latham KE (<A HREF="http://www.genetics.org/content/193/3/877.long" target="_blank" class="fwn">2013</A>)  Systems genetics implicates cytoskeletal genes in oocyte control of cloned embryo quality. Genetics 193:877-896
 <LI>
 DuBose CS, Chesler EJ, Goldowitz D, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23289978" target="_blank" class="fwn">2013</A>) Use of the expanded panel of BXD mice narrow QTL regions in ethanol-induced locomotor activation and motor incoordination. Alcohol Clin Exp Res 37:170-83
 <LI>
@@ -323,6 +296,8 @@ Andreux PA, Williams EG, Koutnikova H, Houtkooper RH, Champy MF, Henry H, Schoon
 <LI>
 Boughter JD Jr, Mulligan MK, St John SJ, Tokita K, Lu L, Heck DH, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Genetic control of a central pattern generator: Rhythmic oromotor movement in mice Is controlled by a major locus near Atp1a2. PLoS One 7:e38169. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0038169" target="_blank" class="fwn"><I>Full Text version</I> </A>
 <LI>
+Bubier JA, Chesler EJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22422471" target="_blank" class="fwn">2012</A>) Accelerating discovery for complex neurological and behavioral disorders through systems genetics and integrative genomics in the laboratory mouse. Neurotherapeutics 9:338-348 <A href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3325414/" target="_blank" class="fwn"><I>Full Text version</I> </A>
+<LI>
 Bryant CD, Kole LA, Guido MA, Sokoloff G, Palmer AA  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Congenic dissection of a major QTL for methamphetamine sensitivity implicates epistasis. Genes, Brain and Behavior 11:623-632  <A href="/images/upload/Bryant_Palmer2012.pdf" target="_blank" class="fwn"><I>PDF version</I> </A>
 <LI>
 Downing C, Balderrama-Durbin C, Kimball A, Biers J, Wright H, Gilliam D, Johnson TE (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22413943" target="_blank" class="fwn">2012</A>) Quantitative trait locus mapping for ethanol teratogenesis in BXD recombinant inbred mice. Alcohol Clin Exp Res. 36:1340-1354
@@ -363,6 +338,10 @@ Yin L, Unger EL, Jellen LC, Earley CJ, Allen RP, Tomaszewicz A, Fleet JC, Jones 
 <LI>
 Ziebarth JD, Cook MN, Wang X, Williams RW, Lu L, Cui Y  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Treatment- and population-dependent activity patterns of behavioral and expression QTLs. PLoS One 7:e31805. 
 <SMALL><A HREF="http://www.plosone.org/article/fetchObjectAttachment.action?uri=info%3Adoi%2F10.1371%2Fjournal.pone.0031805&representation=PDF" target="_blank" class="fwn">PDF version</A><A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0031805" target="_blank" class="fwn"><I>Full Text version</I> </A> 
+<LI>
+Zumbrun EE, Abdeltawab NF, Bloomfield HA, Chance TB, Nichols DK, Harrison PE, Kotb M, Nalca A  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23207275" target="_blank" class="fwn">2012</A>) Development of a murine model for aerosolized ebolavirus infection using a panel of recombinant inbred mice. Viruses. 2012 Dec 3;4(12):3468-3493
+
+
 </SMALL>
 
 
